--- a/Resolution.tex
+++ b/Resolution.tex
@@ -427,7 +427,7 @@ The following function, denoted \textit{NSC-function}, is used to fit the resolu
 f(\pt) = \sqrt{\frac{N^2}{\pt^{2}} + \frac{S^2}{\pt} + C^2}
 \label{eq:NSC}
 \end{equation}
-with $\pt=\pt^{ave}$ and the free parameters $N, S$ and $C$. This function is chosen in accordance to the parametrization typically used for the description of the relative energy-resolution in calorimeters~\cite{bib:PDG:2012}. At low momenta, the resolution is mainly dominated by electronic noise and pile-up described by the \textit{noise term} N. For increasing energies, the resolution is driven by fluctuations of the shower development described by the \textit{stochastic term} S. At high energies however, the resolution is eventually limited by calorimeter miscalibration and non-uniformities described by the \textit{constant term} $C$. If the data-to-simulation ratio is flat as function of $\pt^{ave}$ one expects to find one common scale factor $k_{NSC}$ for the $N$, $S$ and $C$ parameters to describe the data. Significant differences between data and the actual modelling of the detector behaviour consequently can result in the necessity to use individual scale factors for the $k_N$, $k_S$ and $k_C$ parameters in order to describe the data from the fit results of the function to the simulation. \\
+with $\pt=\pt^{ave}$ and the free parameters $N, S$ and $C$. This function is chosen in accordance to the parametrization typically used for the description of the relative energy-resolution in calorimeters~\cite{bib:PDG:2012}, as introduced in Sec.~\ref{sec:cms}. If the data-to-simulation ratio is flat as function of $\pt^{ave}$ one expects to find one common scale factor $k_{NSC}$ for the $N$, $S$ and $C$ parameters to describe the data. Significant differences between data and the actual modelling of the detector behaviour consequently can result in the necessity to use individual scale factors for the $k_N$, $k_S$ and $k_C$ parameters in order to describe the data from the fit results of the function to the simulation. \\
 In order to test the assumption of a flat ratio the data points are fitted with the following function 
 \begin{equation}
 f(\pt) = \sqrt{\frac{(k_{NS} \cdot N)^2}{\pt^{2}} + \frac{(k_{NS} \cdot S)^2}{\pt} + (k_{C} \cdot C)^2} 
